# AD

./: .gitignore  CMakeLists.txt  README.md
autodiff/: CMakeLists.txt
autodiff/lib/: CMakeLists.txt  InitAD.cpp
autodiff/lib/Conversion/: CMakeLists.txt
autodiff/lib/Conversion/ADToCore/: ADToCore.cpp  Abs.cpp  CMakeLists.txt  GradAbs.cpp  Helper.cpp  Helper.hpp  Numslike.cpp  Placeholder.cpp  Rsqrt.cpp  Scalar.cpp  Shape.cpp
autodiff/lib/Conversion/ADToTosa/: ADToTosa.cpp  CMakeLists.txt
autodiff/lib/Conversion/GradAbstractToConcrete/: AbstractBinary.cpp  AbstractUnary.cpp  GradAbstractToConcrete.cpp
autodiff/lib/Conversion/GradToCore/: Abs.cpp  Add.cpp  AvgPool2d.cpp  Clamp.cpp  Conv2D.cpp  GradToCore.cpp  GradToCoreImpl.cpp  Gradient.cpp  MatMul.cpp  Reciprocal.cpp  ReduceSum.cpp  Reshape.cpp  Rewriter.hpp  Sigmoid.cpp  Utils.cpp  Utils.hpp
autodiff/lib/Conversion/LinalgExtConversion/: LinalgExtConversion.cpp
autodiff/lib/Conversion/NablaLowering/: NablaLowering.cpp
autodiff/lib/Dialect/: CMakeLists.txt
autodiff/lib/Pass/Autodiff/: ADUtils.cpp  ADUtils.hpp  CMakeLists.txt  DiffDeclPass.cpp  DiffImplPass.cpp  DiffPass.cpp  Dual.hpp  Experimental.cpp  GenGrad.cpp  GenericWrapper.hpp  Grad.cpp  GradGeneric.cpp  MathRules.cpp  MathRules.hpp  Naive.cpp  OpHandler.cpp  OpHandler.hpp  Pipeline.cpp  Preprocess.cpp  Rules.cpp  Rules.hpp  TosaRules.cpp  TosaRules.hpp
autodiff/lib/Pass/Simplify/: CMakeLists.txt  Simplify.cpp
autodiff/lib/Rule/: CMakeLists.txt  Helper.cpp  Rules.cpp  Utils.cpp
autodiff/lib/Rule/ArithRules/: AddRules.cpp  ArithRules.cpp  ArithRules.hpp  CmpUtils.cpp  CmpUtils.hpp  DivRules.cpp  MaxRules.cpp  MinRules.cpp  MulRules.cpp  NegRules.cpp  SubRules.cpp
autodiff/lib/Util/: Arith.cpp  Bufferization.cpp  CMakeLists.txt  Generic.cpp  Others.cpp  Tape.cpp
autodiff/tools/autodiff-opt/: CMakeLists.txt  autodiff-opt.cpp
(+108 files in other folders)
